# ASMD

./: .gitattributes  .gitignore  .gitmodules  AudioScoreDataset.m  Makefile  README.md  README.rst  alignment_stats.py  audioscoredataset.py  audioscoredataset.pyx  build.py  compute_alignment_ditribution.py  conversion_tool.py  conversion_tool.pyx  convert_from_file.py  convert_from_file.pyx  convert_gt.py  datasets.json  datasets.json.REMOVED.git-id  datasets.yaml  generate_ground_truth.py  ground-truth.tar.gz.REMOVED.git-id  install.py  kunstderfuge.db.REMOVED.git-id  load_data.m  pyproject.toml  requirements.txt  scrape.py  setup.py  test.py  test_utils.pyx
asmd/: AudioScoreDataset.m  Pipfile  _alignment_stats.pkl  _alignment_stats.pkl.REMOVED.git-id  alignment_stats.py  asap.py  asmd.py  asmd.pyx  audioscoredataset.py  audioscoredataset.pyx  conversion_tool.py  conversion_tool.pyx  convert_from_file.py  convert_from_file.pyx  dataset_utils.py  datasets.json  eita  generate_ground_truth.py  install.py  utils.py  utils.pyx
asmd/definitions/: Bach10.json  Maestro.json  MusicNet.json  PHENICX.json  SMD.json  TRIOS_dataset.json  traditional_flute.json  vienna_corpus.json
asmd/eita/: alignment_eita.py
asmd/eita/Programs/: ErrorDetection  Fmt3xToHmm  MatchToCorresp  MusicXMLToFmt3x  MusicXMLToHMM  RealignmentMOHMM  ScorePerfmMatcher  SprToFmt3x  midi2pianoroll
definitions/: Bach10.json  Maestro.json  MusicNet.json  PHENICX.json  SMD.json  TRIOS_dataset.json  traditional_flute.json  vienna_corpus.json
docs/: API.rst  Adding_datasets.rst  Converting.rst  Installation.rst  JSON.rst  License.rst  Reproduce_from_scratch.rst  Scientific_notes.rst  Utilities.rst  conf.py  index.rst
kunstderfuge/: README.md  kunstderfuge.db  scrape.py  test_utils.pyx
