[tool.poetry]
name = "datasets"
version = "0.1.0"
description = ""
authors = ["Federico Simonetta"]
license = "MIT"
# include = ["*.json", "**/*.json", "*.mid", "**/*.mid", "*.pyx", "**/*.pyx"]
# exclude = ["kunstderfuge/*", ".git*", ".python-version"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"
cython = "^0.29.14"
plotly = "^4.4.1"
pretty_midi = "^0.2.8"
scikit_learn = "^0.22.1"
pyfiglet = "^0.8.post1"
alive-progress = "^1.3.3"
prompt_toolkit = "^3.0.3"
decorator = "^4.4.1"
essentia = "2.1b6"
sphinx = { version = "^2.2", optional = true }
sphinx_rtd_theme = { version = "^0.4.3", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.poetry.dev-dependencies]
snoop = "^0.2.4"
ipdb = "*"
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
